# codex_trade

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml  start_dashboard.cmd
docs/: ARCHITECTURE.md  BACKTESTING.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  EVIDENCE.md  MONITORING.md  PROJECT_PLAN.md  RISK_AND_OMS.md
scripts/: check_okx_private.py  check_okx_private_ws.py  check_okx_public.py  collect_okx_history.py  collect_okx_rest.py  collect_okx_ws_public.py  demo_order_ws_lifecycle.py  demo_place_cancel_order.py  preview_okx_order.py  preview_pretrade_flow.py  preview_rebalance_signal.py  reconcile_okx_orders.py  run_backtest.py  run_backtest_split.py  run_backtest_sweep.py  run_backtestingpy_trend.py  run_dashboard.py  run_demo_rebalance_executor.py  run_demo_rebalance_runner.py  run_rebalance_backtest.py  run_rebalance_split.py  run_rebalance_walk_forward.py  run_trend_walk_forward.py  simulate_order_lifecycle.py  simulate_reconciliation.py  simulate_risk_check.py  snapshot_okx_account.py  snapshot_okx_reconciliation_sources.py  start_dashboard_windows.ps1  validate_market_data.py
tests/: test_account.py  test_backtest.py  test_backtestingpy_adapter.py  test_config.py  test_dashboard.py  test_data_quality.py  test_demo_rebalance_executor.py  test_demo_rebalance_runner.py  test_instruments.py  test_market.py  test_okx_client.py  test_okx_orders.py  test_okx_responses.py  test_oms.py  test_order_manager.py  test_order_sizer.py  test_rebalance_backtest.py  test_rebalance_signal.py  test_reconciliation.py  test_risk.py  (+5 more)
(+43 files in other folders)
