[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okx-quant-lab"
version = "0.1.0"
description = "OKX spot quant trading system training ground."
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
]

[tool.setuptools.packages.find]
where = ["src"]
